...

import UIKit

enum TabItem: String, CaseIterable {
    case news = "news"
    case map = "map" 
    case search = "search"
    case saved = "saved"
    case more = "more"
    
    var title: String {
        switch self {
        case .news:
            return "Home"
        case .map:
            return "Map"
        case .search:
            return "Search"
        case .saved:
            return "Saved"
        case .more:
            return "More"
        }
    }
    
    var iconName: String {
        switch self {
        case .news:
...
