...
    
    var displayName: String {
        switch self {
        case .automatic:
            return "Follow system"
        case .osrsLight:
            return "Light"
        case .osrsDark:
            return "Dark"
        }
    }
    
    var description: String {
        switch self {
        case .automatic:
...
